--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
   <footer>
     <div class="container">
-      <div>© <span id="y"></span> BluePort • Assistente IA. Feito com ❤️ em PT-BR.</div>
-      <div>Projeto de <strong>Darliane Cunha</strong> — <a href="mailto:darlianerc@gmail.com">darlianerc@gmail.com</a></div>
+      <div>© <span id="y"></span> BluePort • Assistente IA. </div>
+      <div>Contato com nossa equipe <strong>Darliane Cunha</strong> — <a href="mailto:darlianerc@gmail.com">darlianerc@gmail.com</a></div>
     </div>
   </footer>
 
